fixed some mistakes after mentor's review